fixed spacing issue

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -9,7 +9,7 @@ nav {
  section {
      padding-top: 15vh;
      min-height: 100vh;
-
+     padding-bottom: 15vh;
      display: flex;
      align-items: center;
  }
@@ -49,8 +49,8 @@ nav {
     background-color: black;
  }
 
- .singlePageBlue h2 {
-     color: whitesmoke;
+ .Black h2, .blue h2 {
+     color: white;
  }
 
  .card {
